 * tests:
 	- remove test-ring test;
 	- add tests to test-tables;
 	- fix access to unit load path;
 	- pass on kernels without memory controller;
 	- fix masks in test-cgroup-mask test;
 	- add test-cgroup-mask test;
 	- add test units;
 	- add test which shows access to random memory to test-strv;
 	- use fabs on doubles in test-util;
 * rules:
 	- consistently use "?*" instead of "*?";
 	- uaccess - add ID_SOFTWARE_RADIO;
 	- allow systemd to manage loop device partitions;
 * sysctl:
 	- enable promote_secondaries by default;
 * build:
 	- do not distribute generated emergency.service;
 	- add TEST_DIR path;
 	- add -Wno-typedef-redefinition;
 	- disable SMACK support by default;
 	- add missing files for distcheck;
 	- check for intltool also when polkit is enabled;
 	- remove kdbus-update build target;
 	- use a common rule for some gperf commands;
 * bugfix:
 	- fix add comma when removed option is in the middle(fstab-generator);
 	- fix format string for usec_t type(generator);
 	- fix oneshot service resource control;
 	- use the default RestartSec for serial getty services;
 	- fix Xen domU discovery(virt);
 	- check asprintf return code;
 * remove nss-myhostname support;
 * remove systemd-tty-ask-password-agent program;
 * remove systemd-ask-password program;
 * always prefer our headers to system headers;
 * remove systemd-socket-proxyd program;
 * change return type to void in help function for systemd-* programs;

   systemd (214.7)
~~~~~~~
 * core:
    - redirect stdout to syslog by default;
    - remove EXEC_OUTPUT_JOURNAL type output;
    - honour rd.systemd.unit= only in the initrd, not the host;
    - clean-up signal reset logic when reexec;
    - log info when snapshots are created and removed;
    - make sure Environment fields passed in for transient units are properly written to unit files;
    - rework messages during shutdown;
    - use correct format string for UIDs;
    - don't require cgroups xattr support;