@@ -95,7 +95,6 @@
 /test-conf-files
 /test-daemon
 /test-date
-/test-device-nodes
 /test-ellipsize
 /test-engine
 /test-env-replace
